--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 * {
   margin: 0;
@@ -22,3 +20,10 @@ body {
   min-height: 100vh;
   width: 100%;
 }
+
+.reverse {
+  animation-direction: reverse;
+}
+
+@tailwind components;
+@tailwind utilities;
