--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,31 @@ body {
   width: 100%;
 }
 
-.reverse {
-  animation-direction: reverse;
+a,
+button {
+  cursor: pointer;
 }
 
 @tailwind components;
+
+a:after {
+  display: block;
+  content: '';
+  border-bottom: solid 3px #019fb6;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+
+a:hover:after {
+  transform: scaleX(1);
+}
+
+a.fromRight:after {
+  transform-origin: 100% 50%;
+}
+
+a.fromLeft:after {
+  transform-origin: 0% 50%;
+}
+
 @tailwind utilities;
