--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,10 @@ button {
   @apply scale-100;
 }
 
+.custom-link.no-animation:hover:after {
+  @apply scale-x-0;
+}
+
 .loading-text-shadow {
   text-shadow:
     2px 0 #009ddd,
